update player list

--- a/index.html
+++ b/index.html
@@ -344,29 +344,6 @@
       }
     }
 
-    .table-card {
-      display: none;
-      background: var(--white);
-      border: 1px solid #E5E7EB;
-      border-radius: 14px;
-      padding: var(--space-md);
-      box-shadow: var(--shadow-sm);
-      margin-bottom: var(--space-md);
-    }
-
-    .table-card-row {
-      display: flex;
-      justify-content: space-between;
-      gap: 12px;
-      padding: 6px 0;
-      border-bottom: 1px dashed #E5E7EB;
-      font-size: 0.9rem;
-    }
-
-    .table-card-row:last-child { border-bottom: none; }
-
-    .table-card-label { color: var(--text-muted); font-weight: 600; }
-    .table-card-value { text-align: right; }
 
     table { width: 100%; border-collapse: collapse; }
 
@@ -995,9 +972,7 @@
       .modal-actions { flex-direction: column; }
       .modal-actions .btn { width: 100%; }
 
-      .table-wrapper { display: none; }
-      .table-card { display: block; }
-      #joueurs .table-wrapper { display: block; }
+      .table-wrapper { display: block; }
     }
   </style>
 </head>
@@ -1060,7 +1035,6 @@
           <tbody id="playersBody"></tbody>
         </table>
       </div>
-      <div id="playersCards"></div>
       <div class="pagination" id="playersPagination" style="display:none;">
         <button class="btn btn-secondary btn-sm" id="playersPrevBtn" aria-label="Page précédente">Précédent</button>
         <span id="playersPaginationLabel" class="pagination-label"></span>
@@ -1114,8 +1088,6 @@
           <tbody id="scoresBody"></tbody>
         </table>
       </div>
-      <div id="scoresCards"></div>
-
       <div class="pagination" id="scoresPagination" style="display:none;">
         <span id="scoresPaginationLabel" class="helper-text"></span>
         <button class="btn btn-secondary btn-sm" id="scoresPrevBtn">Précédent</button>
@@ -1306,6 +1278,7 @@
     };
 
     const PLAYERS_STATE_KEY = 'monopfoot.players.state';
+    const HISTORY_PAGE_KEY = 'monopfoot.history.page';
 
     let playersState = {
       page: 1,
@@ -1350,10 +1323,16 @@
     }
 
     function getPlayersPageSize() {
-      const width = window.innerWidth;
-      if (width <= 640) return 5;
-      if (width <= 900) return 10;
-      return 20;
+      return 10;
+    }
+
+    function loadHistoryPage() {
+      const raw = Number(localStorage.getItem(HISTORY_PAGE_KEY));
+      return Number.isInteger(raw) && raw > 0 ? raw : 1;
+    }
+
+    function persistHistoryPage(page) {
+      localStorage.setItem(HISTORY_PAGE_KEY, String(page));
     }
 
     function scrollPlayersToTop() {
@@ -1540,12 +1519,12 @@
 
     function renderPlayersTable(filter = '', sortKey = 'winRate', sortDir = 'desc') {
       const tbody = document.getElementById('playersBody');
-      const cards = document.getElementById('playersCards');
       const data = [...playersStats];
 
       if (!data.length) {
         tbody.innerHTML = '<tr><td colspan="7" class="text-center">Aucun joueur.</td></tr>';
-        cards.innerHTML = '<div class="empty-state">Aucun joueur.</div>';
+        const pagination = document.getElementById('playersPagination');
+        if (pagination) pagination.style.display = 'none';
         updatePlayersPagination();
         return;
       }
@@ -1577,32 +1556,6 @@
         `;
       }).join('');
 
-      cards.innerHTML = data.map(player => {
-        const results = player.recentForm || [];
-        const dots = results.map(result => {
-          const cls = result === 'W' ? 'form-win' : result === 'L' ? 'form-loss' : 'form-draw';
-          return `<span class="form-dot ${cls}">${result}</span>`;
-        }).join('');
-        const missing = Math.max(0, 5 - results.length);
-        const empties = Array.from({ length: missing }).map(() => '<span class="form-dot form-empty">•</span>').join('');
-
-        return `
-          <div class="table-card" data-player-id="${player.id}">
-            <div class="table-card-row"><span class="table-card-label">Joueur</span><span class="table-card-value"><strong>${player.name}</strong></span></div>
-            <div class="table-card-row"><span class="table-card-label">Matchs</span><span class="table-card-value">${player.games}</span></div>
-            <div class="table-card-row"><span class="table-card-label">Victoires</span><span class="table-card-value">${player.wins}</span></div>
-            <div class="table-card-row"><span class="table-card-label">Taux</span><span class="table-card-value">${player.winRate}%</span></div>
-            <div class="table-card-row"><span class="table-card-label">Buts/match</span><span class="table-card-value">${player.avgGoalsForPerMatch === null ? '—' : player.avgGoalsForPerMatch}</span></div>
-            <div class="table-card-row"><span class="table-card-label">Forme</span><span class="table-card-value"><span class="form-indicator">${dots}${empties}</span></span></div>
-            <div class="table-card-row"><span class="table-card-label">Actions</span>
-              <span class="table-card-value">
-                <button class="btn btn-muted btn-sm" data-action="edit-player">✏️</button>
-                <button class="btn btn-muted btn-sm" data-action="delete-player">🗑</button>
-              </span>
-            </div>
-          </div>
-        `;
-      }).join('');
       updatePlayersPagination();
     }
 
@@ -1618,6 +1571,27 @@
       const limit = Number(playersPagination.limit || getPlayersPageSize());
       const totalPages = total > 0 ? Math.ceil(total / limit) : 1;
       const currentPage = Math.min(Math.max(1, Number(playersState.page) || 1), totalPages);
+
+      if (total <= limit) {
+        pagination.style.display = 'none';
+        return;
+      }
+
+      label.textContent = `Page ${currentPage} / ${totalPages}`;
+      prevBtn.disabled = currentPage <= 1;
+      nextBtn.disabled = currentPage >= totalPages;
+      pagination.style.display = 'flex';
+    }
+
+    function updateHistoryPagination() {
+      const pagination = document.getElementById('scoresPagination');
+      const label = document.getElementById('scoresPaginationLabel');
+      const prevBtn = document.getElementById('scoresPrevBtn');
+      const nextBtn = document.getElementById('scoresNextBtn');
+
+      const { limit, offset, total } = scoresState;
+      const totalPages = total > 0 ? Math.ceil(total / limit) : 1;
+      const currentPage = total > 0 ? Math.floor(offset / limit) + 1 : 1;
 
       if (total <= limit) {
         pagination.style.display = 'none';
@@ -1700,14 +1674,12 @@
 
     function renderScoresTable() {
       const tbody = document.getElementById('scoresBody');
-      const cards = document.getElementById('scoresCards');
       const empty = document.getElementById('scoresEmpty');
       const tableWrapper = tbody.closest('.table-wrapper');
 
       if (!scoresState.items.length) {
         tableWrapper.style.display = 'none';
         empty.style.display = 'block';
-        cards.innerHTML = '';
         updateScoresPagination();
         return;
       }
@@ -1743,55 +1715,11 @@
         `;
       }).join('');
 
-      cards.innerHTML = scoresState.items.map(match => {
-        const teamALabel = buildTeamLabel(match.teamA || []);
-        const teamBLabel = buildTeamLabel(match.teamB || []);
-        if (!teamALabel || !teamBLabel) {
-          const rosterLabel = buildRosterLabel(match.roster || []);
-          return `
-            <div class="table-card">
-              <div class="table-card-row"><span class="table-card-label">Date</span><span class="table-card-value">${formatDateShort(match.played_at)}</span></div>
-              <div class="table-card-row"><span class="table-card-label">Compo</span><span class="table-card-value">Manquante</span></div>
-              <div class="table-card-row"><span class="table-card-label">Roster</span><span class="table-card-value">${rosterLabel || '—'}</span></div>
-            </div>
-          `;
-        }
-        const tie = match.team_a_score === match.team_b_score;
-        const teamAWins = match.team_a_score > match.team_b_score;
-        const winnerLabel = tie ? 'Égalité' : (teamAWins ? teamALabel : teamBLabel);
-        return `
-          <div class="table-card">
-            <div class="table-card-row"><span class="table-card-label">Date</span><span class="table-card-value">${formatDateShort(match.played_at)}</span></div>
-            <div class="table-card-row"><span class="table-card-label">Équipe A</span><span class="table-card-value">${teamALabel}</span></div>
-            <div class="table-card-row"><span class="table-card-label">Score A</span><span class="table-card-value">${match.team_a_score}</span></div>
-            <div class="table-card-row"><span class="table-card-label">Équipe B</span><span class="table-card-value">${teamBLabel}</span></div>
-            <div class="table-card-row"><span class="table-card-label">Score B</span><span class="table-card-value">${match.team_b_score}</span></div>
-            <div class="table-card-row"><span class="table-card-label">Vainqueur</span><span class="table-card-value">${winnerLabel}</span></div>
-          </div>
-        `;
-      }).join('');
-
       updateScoresPagination();
     }
 
     function updateScoresPagination() {
-      const pagination = document.getElementById('scoresPagination');
-      const label = document.getElementById('scoresPaginationLabel');
-      const prevBtn = document.getElementById('scoresPrevBtn');
-      const nextBtn = document.getElementById('scoresNextBtn');
-
-      const { limit, offset, total } = scoresState;
-      if (total <= limit) {
-        pagination.style.display = 'none';
-        return;
-      }
-
-      const start = total === 0 ? 0 : offset + 1;
-      const end = Math.min(offset + limit, total);
-      label.textContent = `Affichage ${start}-${end} sur ${total}`;
-      prevBtn.disabled = offset <= 0;
-      nextBtn.disabled = offset + limit >= total;
-      pagination.style.display = 'flex';
+      updateHistoryPagination();
     }
 
     function renderKpis() {
@@ -2520,11 +2448,14 @@
       document.getElementById('playerFilter').addEventListener('change', (event) => {
         scoresState.filterPlayerId = event.target.value || null;
         scoresState.offset = 0;
+        persistHistoryPage(1);
         loadScores();
       });
 
       document.getElementById('scoresPrevBtn').addEventListener('click', () => {
         scoresState.offset = Math.max(0, scoresState.offset - scoresState.limit);
+        const page = Math.floor(scoresState.offset / scoresState.limit) + 1;
+        persistHistoryPage(page);
         loadScores();
       });
 
@@ -2532,6 +2463,8 @@
         const next = scoresState.offset + scoresState.limit;
         if (next < scoresState.total) {
           scoresState.offset = next;
+          const page = Math.floor(scoresState.offset / scoresState.limit) + 1;
+          persistHistoryPage(page);
           loadScores();
         }
       });
@@ -2595,6 +2528,8 @@
       if (searchInput) {
         searchInput.value = playersState.q || '';
       }
+      const historyPage = loadHistoryPage();
+      scoresState.offset = (historyPage - 1) * scoresState.limit;
       const burgerBtn = document.getElementById('burgerBtn');
       const mobileNav = document.getElementById('mobileNav');
       if (burgerBtn && mobileNav) {
